add more disclaimers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <h1> Will My (NeurIPS?) Paper get Accepted? </h1>
-This uses a simple set model (1 layer shared across all elements, a nonlinearity, and another layer after mean aggregation), trained on ICLR 2019 data. The overall statistics (average accepted rating) match up very well with <a href='https://medium.com/@NeurIPSConf/what-we-learned-from-neurips-2019-data-111ab996462c'>NeurIPS 2019 data</a>, so I suspect it should be a reasonable proxy for NeurIPS 2020 data. Of course, this model can't take into account your specific situation, so don't read too much into it :)
+This uses a simple set model (1 layer shared across all elements, a nonlinearity, and another layer after mean aggregation), trained on ICLR 2019 data. The overall statistics (average accepted rating) match up very well with <a href='https://medium.com/@NeurIPSConf/what-we-learned-from-neurips-2019-data-111ab996462c'>NeurIPS 2019 data</a>, so I suspect it should be a reasonable proxy for NeurIPS 2020 data. Of course, this model can't take into account your specific situation, so don't read too much into it :) Also, if you're trying out of distribution reviews, no guarantees about their accuracy either.
 
 
 <body>
